# AI-Image-Detector

./: .gitignore  CHANGELOG.md  Dockerfile  GIT_UPLOAD_GUIDE.md  NTIRE_2026_FINAL_PIPELINE.md  README.md  RELEASE_NOTES.md  UPDATE_REPORT.md  docker-compose.yml  download_manual.ps1  package-lock.json  package.json  pyproject.toml  requirements.txt  start_backend.py  start_backend.spec  tailwind.config.js  vite.config.ts
.github/: pull_request_template.md
backend/: detector.py  explanation_service.py  main.py  requirements.txt  transforms.py
checkpoints/: README.md  best.pth
configs/: base_config.yaml  cloud_3090_config.yml  cloud_4080_config.yml  cloud_4090_config.yml  cloud_A100_80G_config.yml  cloud_T4_config.yml  cloud_gpu_config.yml  cloud_gpu_fast_config.yml  cloud_gpu_optimized.yml  database.yml  dataset_config.yaml  deepspeed_h20_nvlink.json  demo_config.yml  dev_cpu.yaml  hard_negatives.txt  phase1_config.yml  phase2_config.yml  train_gpu.yaml  v10_competition.yaml  v10_industrial.yaml  v9_competition.yaml  v9_industrial.yaml
data_management/: README.md  final_schema.sql  requirements.txt
docs/: DEPLOYMENT.md  DEPLOY_MANUAL.md  FINAL_UPDATE.md  MODEL_CARD.md  PROJECT_GUIDE.md  QUICK_START_GUIDE.md  UPDATE_REPORT.md  USER_MANAGEMENT_SETUP_GUIDE.md  architecture.md  cloud_gpu_training_guide.md  remote_prepare_report.json
explainability/: cam.py
frontend/: index.html  logo-export.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
models/: hybrid_detector.py  lora.py
outputs/: photos_test_deploy_safe_tri_branch_results.csv
(+169 files in other folders)
